tests/errors/sem.circ-dep.constant.or
main :: () -> void {
    A :: B;
    B :: A;
    A;
};
